# itu-sdse-project

./: .gitignore  README.md  go.mod  oldpipeline.go  pipeline.go  pyproject.toml  requirements.txt
.dvc/: .gitignore
.github/workflows/: dagger.yml  test.yml
IntermediaryPythonFiles/: Train.py  X_SelectBestModelAndRegister.py  zzTestALLScripts.ipynb
Module/: 0.0_Fetch_Data.py  0.0_read_data.py  0.1_data_preprocessing.py  0.1_read_data.py  0.2_data_preprocessing.py  0.2_data_preprocessing_copy_test.py  0.2_generate_train_test_data.py  1.0_Train.py  1.0_TrainXGBoost.py  1.1_TrainSKLearnLR.py  1.1_TrainXGBoost.py  1.2_TrainSKLearnLog.py  2.0_SelectBestModelAndRegister.py  3.0_Deploy.py  __init__.py  config.py  dataset.py  features.py  pyproject.toml  train_test_data.pkl  util.py  zzTestALLScripts.ipynb
Module/artifacts/: lead_model_xgboost.json  model_results.json
Module/modeling/: predict.py  train.py
Module/pythonFiles/: 0.0_Fetch_Data.py  0.1_read_data.py  0.2_data_cleaning.py  0.2_data_preprocessing.py  0.3_seperateColumns.py  1.0_Train.py  1.1_TrainXGBoost.py  1.2_TrainSKLearnLog.py  TrainXGBoost.py
Project/Project/: LICENSE  Makefile  README.md
artifacts/: columns_list.json  lead_model_xgboost.json  model_results.json  outlier_summary.json
data/interim/: data_filtered.csv
data/processed/: train_data_gold.csv  training_data.csv  x_test.csv  (+3 more)
docs/: projectDescription.md
go/: pipeline.go
models/: lead_model_lr.pkl  lead_model_xgboost.json  model_results.json  test.ipynb
notebooks/: main.ipynb  train_test_data.pkl  zzTestALLScripts.ipynb
(+819 files in other folders)
